# litter-detector-baseline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
configs/: hard_negatives_licenses.json  hard_negatives_seed.txt  label_crosswalk.csv  olm_autolabel_ontology.json  yolov8n_coco_baseline.yaml
configs/taxonomies/: olm_leaves.json  taco_categories.json
docs/: ARCHITECTURE.md  contributor_assist_goal.md  ingestion.md  olm-auth-howto.md  source_distillation_strategy_for_trash_models.md  training_quickstart.md
export/: __init__.py  export_yolov8.py
scripts/: build_hard_negatives_seed.py  put_r2_secret.py
src/litter_detector_baseline/: __init__.py  __main__.py  config.py  io.py  onnx_backend.py  postprocess.py  preprocess.py  types.py
src/litter_detector_baseline/ingest/: __init__.py  __main__.py  crosswalk.py  hard_negatives.py  olm_auth.py  olm_csv.py  openlittermap.py  storage.py  taco.py
tests/: test_crosswalk.py  test_export_yolov8.py  test_hard_negatives.py  test_ingest_storage.py  test_smoke.py  test_taco_ingest.py
training/: __init__.py  eval_v1.py  train_yolo11n_v1.py
training/data/: olm_autolabel.py  prepare_dataset.py
